5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1798_2566.log
== TEST (2019-06-10 14:21:52) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:28:49) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
for i in s:
	k = z[i] * s / 100
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:29:30) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
for i in v:
	k = z[i] * s / 100
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:29:37) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
for i in z:
	k = z[i] * s / 100
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:24) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
for i in z:
	k = z[i] * 100 / s
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:50) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
for i in z:
	k = z[i] * 100 / s
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:51) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
j = z
for i in z:
	k = j[i] * 100 / s
	print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:29) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)

for i in z:
	k = z[i] * 100 / s
	print(k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:04) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)

for i in z:
	k = z[i] * s / 100
print(k)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:32) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)

for i in z:
	k = z[i] * s / 100
	print(k)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:44:27) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = (z[0] / s) * 100
ter = (z[1] / s) * 100
q = (z[2] / s) * 100
qui = (z[3] / s) * 100
sex = (z[4] / s) * 100
sab = (z[5] / s) * 100
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:46:55) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:49:24) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(str(t).replace('','.'))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:49:51) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:49:58) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)
	
-- EXECUTION TIME:
1.17024
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:04) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:43) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(str(t).replace('','.')
	
-- ERROR:
File "XXXX", line 33
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:49) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(str(t).replace('','.'))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:13) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(str(t).replace(''"."))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:39) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = sum(z)
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100, 1)
ter = round((z[1] / s) * 100, 1)
q = round((z[2] / s) * 100, 1)
qui = round((z[3] / s) * 100, 1)
sex = round((z[4] / s) * 100, 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(str(t).replace(''))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:54:21) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = z[0] + z[1] + z[2] + z[3] + z[4] + z[5]
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100 , 1)
ter = round((z[1] / s) * 100 , 1)
q = round((z[2] / s) * 100 , 1)
qui = round((z[3] / s) * 100 , 1)
sex = round((z[4] / s) * 100 , 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:55:28) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
z = zeros(6, dtype = int)
for i in range (size(v)):
	if(v[i] == 2):
		z[0] = z[0] + 1
	elif(v[i] == 3):
		z[1] = z[1] + 1
	elif(v[i] == 4):
		z[2] = z[2] + 1
	elif(v[i] == 5):
		z[3] = z[3] + 1
	elif(v[i] == 6):
		z[4] = z[4] + 1
	elif (v[i] == 7):
		z[5] = z[5] + 1
s = z[0] + z[1] + z[2] + z[3] + z[4] + z[5]
t = zeros(6, dtype=int)
seg = round((z[0] / s) * 100 , 1)
ter = round((z[1] / s) * 100 , 1)
q = round((z[2] / s) * 100 , 1)
qui = round((z[3] / s) * 100 , 1)
sex = round((z[4] / s) * 100 , 1)
sab = round((z[5] / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab


	
-- EXECUTION TIME:
1.11493
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:02:48) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))

seg = 0
ter = 0
qua = 0 
qui = 0
sex = 0
sab = 0

for i in range (size(v)):
	if(v[i] == 2):
	 	seg = seg + 1
	elif(v[i] == 3):
		ter = ter + 1
	elif(v[i] == 4):
		 qua = qua + 1
	elif(v[i] == 5):
		qui = qui + 1
	elif(v[i] == 6):
		sex = sex + 1
	elif (v[i] == 7):
		sab = sab + 1
s = seg + ter + qua + qui + sex + sab
t = zeros(6, dtype=int)
seg = round((seg / s) * 100 , 1)
ter = round((ter / s) * 100 , 1)
q = round((qua / s) * 100 , 1)
qui = round((qui / s) * 100 , 1)
sex = round((sex / s) * 100 , 1)
sab = round((sab / s) * 100, 1)
t[0] = seg
t[1] = ter
t[2] = q
t[3] = qui
t[4] = sex
t[5] = sab
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:04:33) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))

seg = 0
ter = 0
qua = 0 
qui = 0
sex = 0
sab = 0

for i in range (size(v)):
	if(v[i] == 2):
	 	seg = seg + 1
	elif(v[i] == 3):
		ter = ter + 1
	elif(v[i] == 4):
		 qua = qua + 1
	elif(v[i] == 5):
		qui = qui + 1
	elif(v[i] == 6):
		sex = sex + 1
	elif (v[i] == 7):
		sab = sab + 1
s = seg + ter + qua + qui + sex + sab
t = zeros(6, dtype=int)
for i in v:
	t[0] = round((seg / s) * 100 , 1)
	t[1] = round((ter / s) * 100 , 1)
	t[2]= round((qua / s) * 100 , 1)
	t[3] = round((qui / s) * 100 , 1)
	t[4] = round((sex / s) * 100 , 1)
	t[5] = round((sab / s) * 100, 1)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:05:16) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))

seg = 0
ter = 0
qua = 0 
qui = 0
sex = 0
sab = 0

for i in range (size(v)):
	if(v[i] == 2):
	 	seg = seg + 1
	elif(v[i] == 3):
		ter = ter + 1
	elif(v[i] == 4):
		 qua = qua + 1
	elif(v[i] == 5):
		qui = qui + 1
	elif(v[i] == 6):
		sex = sex + 1
	elif (v[i] == 7):
		sab = sab + 1
s = seg + ter + qua + qui + sex + sab
t = zeros(6, dtype=float)
for i in v:
	t[0] = round((seg / s) * 100 , 1)
	t[1] = round((ter / s) * 100 , 1)
	t[2]= round((qua / s) * 100 , 1)
	t[3] = round((qui / s) * 100 , 1)
	t[4] = round((sex / s) * 100 , 1)
	t[5] = round((sab / s) * 100, 1)
print(t)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:05:33) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))

seg = 0
ter = 0
qua = 0 
qui = 0
sex = 0
sab = 0

for i in range (size(v)):
	if(v[i] == 2):
	 	seg = seg + 1
	elif(v[i] == 3):
		ter = ter + 1
	elif(v[i] == 4):
		 qua = qua + 1
	elif(v[i] == 5):
		qui = qui + 1
	elif(v[i] == 6):
		sex = sex + 1
	elif (v[i] == 7):
		sab = sab + 1
s = seg + ter + qua + qui + sex + sab
t = zeros(6, dtype=float)
for i in v:
	t[0] = round((seg / s) * 100 , 1)
	t[1] = round((ter / s) * 100 , 1)
	t[2]= round((qua / s) * 100 , 1)
	t[3] = round((qui / s) * 100 , 1)
	t[4] = round((sex / s) * 100 , 1)
	t[5] = round((sab / s) * 100, 1)
print(t)


	
-- EXECUTION TIME:
1.09756
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
